--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <meta name="description" content="" />
 
    <!-- Site Title -->
-   <title>Starter - SASS Starter HTML5 Template</title>
+   <title>Snazzy - HTML5 Template</title>
 
    <!-- Place favicon.ico in the root directory -->
    <link rel="shortcut icon" type="image/x-icon" href="" />
@@ -17,90 +17,55 @@
    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
    <link rel="stylesheet" href="assets/css/font-awesome-pro.min.css" />
    <link rel="stylesheet" href="assets/css/meanmenu.css" />
+   <link rel="stylesheet" href="assets/css/responsive.css" />
    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body>
-   <!-- start: Header Area -->
-   <header id="header-sticky" class="header-area">
-      <div class="container">
-         <div class="row align-items-center">
-            <div class="col-xl-2 col-lg-2 col-md-6 col-6">
-               <div class="logo-area">
-                  <div class="logo">
-                     <a href="index.html"><img src="assets/images/logos/" alt="" /></a>
-                  </div>
-               </div>
-            </div>
-            <div class="col-xl-7 col-lg-6 col-md-6 col-6">
-               <div class="menu-area">
-                  <div class="main-menu">
-                     <nav id="mobile-menu">
-                        <ul>
-                           <li class="has-dropdown">
-                              <a href="index.html">Home</a>
-                              <ul class="sub-menu">
-                                 <li><a href="index.html">Home One</a></li>
-                                 <li><a href="index-2.html">Home Two</a></li>
-                                 <li><a href="index-3.html">Home Three</a></li>
-                              </ul>
-                           </li>
-                           <li class="has-dropdown">
-                              <a href="services.html">Services</a>
-                              <ul class="sub-menu">
-                                 <li><a href="services.html">Services</a></li>
-                                 <li><a href="services-details.html">Services Details</a></li>
-                              </ul>
-                           </li>
-                           <li class="has-dropdown">
-                              <a href="about.html">Pages</a>
-                              <ul class="sub-menu">
-                                 <li><a href="about.html">About Us</a></li>
-                                 <li><a href="team.html">Team</a></li>
-                                 <li><a href="team-details.html">Team Details</a></li>
-                                 <li><a href="portfolio.html">Cases</a></li>
-                                 <li><a href="portfolio-details.html">Cases Details</a></li>
-                                 <li><a href="pricing.html">pricing Page</a></li>
-                                 <li><a href="faq.html">FAQ Page</a></li>
-                              </ul>
-                           </li>
-                           <li class="has-dropdown">
-                              <a href="blog.html">News</a>
-                              <ul class="sub-menu">
-                                 <li><a href="blog.html">News</a></li>
-                                 <li><a href="blog-details.html">News Details</a></li>
-                              </ul>
-                           </li>
-                           <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                     </nav>
-                  </div>
-               </div>
-               <div class="side-menu-icon d-lg-none text-end">
-                  <a href="javascript:void(0)" class="info-toggle-btn f-right sidebar-toggle-btn"><i
-                        class="fal fa-bars"></i></a>
-               </div>
-            </div>
-            <div class="col-xl-3 col-lg-4 d-none d-lg-block">
-               <div class="header-info f-right">
-                  <div class="info-item info-item-right">
-                     <span>Phone Number</span>
-                     <h5><a href="tel:+88096389">786 686 350 36</a></h5>
-                  </div>
-                  <div class="info-item">
-                     <span>Free Consultancy</span>
-                     <h5><a href="mailto:info@webmail.com">info@webmail.com</a></h5>
+
+   <main id="primary" class="site-main">
+      <!-- start: Start Section -->
+      <section class="sds-redefine-section">
+         <div class="container">
+            <div class="row">
+               <div class="col-12">
+                  <div class="redefine_wrapper" data-bg-image="assets/images/shapes/shape-1.png">
+                     <div class="redefine_title">
+                        <h2 class="title">Redefine your urban style</h2>
+                     </div>
+                     <div class="redefine_item">
+                        <div class="redefine_images">
+                           <img src="assets/images/style/style-1.png" alt="Images">
+                           <div class="shapes-1">
+                              <img src="assets/images/shapes/street-1.png" alt="Shapes">
+                           </div>
+                        </div>
+                        <div class="redefine_content">
+                           <h3 class="title">dapper is more than just clothes. We're a movement. A culture</h3>
+                           <div class="desc">
+                              <p>We are a collective of creators, curating a minimalist aesthetic with a bold edge. Our
+                                 designs are for the modern individual who seeks quality, comfort, and a touch of
+                                 rebellion.</p>
+                              <p>We're pushing the boundaries of urban fashion, blending bold designs with refined
+                                 essentials. Join us in redefining the streets.</p>
+                           </div>
+                           <div class="redefine_button">
+                              <a class="text-btn" href="#">Learn More <span><i
+                                       class="fa-sharp fa-solid fa-angle-right"></i></span></a>
+                           </div>
+                           <div class="shapes-2">
+                              <img src="assets/images/shapes/style-2.png" alt="Shapes">
+                           </div>
+                           <div class="shapes-3">
+                              <img src="assets/images/shapes/urban.png" alt="Shapes">
+                           </div>
+                        </div>
+                     </div>
                   </div>
                </div>
             </div>
          </div>
-      </div>
-   </header>
-   <!-- end: Header Area -->
-
-   <main id="primary" class="site-main">
-      <!-- start: Start Section -->
-      <section class="start-section"></section>
+      </section>
       <!-- end: Start Section -->
    </main>
 
