--- a/index.html
+++ b/index.html
@@ -16,48 +16,238 @@
    <!-- CSS here -->
    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
    <link rel="stylesheet" href="assets/css/font-awesome-pro.min.css" />
-   <link rel="stylesheet" href="assets/css/meanmenu.css" />
+   <link rel="stylesheet" href="assets/css/flickity.min.css" />
    <link rel="stylesheet" href="assets/css/responsive.css" />
+   <link rel="stylesheet" href="assets/css/meanmenu.css" />
    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body>
 
    <main id="primary" class="site-main">
-      <!-- start: Start Section -->
+
+      <!-- start: Collection Section -->
+      <section class="collection-section">
+         <div class="page-width">
+            <div class="collection_wrapper">
+               <div class="collection_item">
+                  <a href="#">
+                     <img src="assets/images/collection/collection-1.png" alt="Images">
+                     <h6 class="title">T-Shirts</h6>
+                  </a>
+               </div>
+               <div class="collection_item">
+                  <a href="#">
+                     <img src="assets/images/collection/collection-2.png" alt="Images">
+                     <h6 class="title">Shirts</h6>
+                  </a>
+               </div>
+               <div class="collection_item">
+                  <a href="#">
+                     <img src="assets/images/collection/collection-3.png" alt="Images">
+                     <h6 class="title">Jackets</h6>
+                  </a>
+               </div>
+               <div class="collection_item">
+                  <a href="#">
+                     <img src="assets/images/collection/collection-4.png" alt="Images">
+                     <h6 class="title">Sweats</h6>
+                  </a>
+               </div>
+               <div class="collection_item">
+                  <a href="#">
+                     <img src="assets/images/collection/collection-5.png" alt="Images">
+                     <h6 class="title">Pants</h6>
+                  </a>
+               </div>
+               <div class="collection_item">
+                  <a href="#">
+                     <img src="assets/images/collection/collection-6.png" alt="Images">
+                     <h6 class="title">Accessories</h6>
+                  </a>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- end: Collection Section -->
+
+      <!-- start: Redefine Section -->
       <section class="sds-redefine-section">
-         <div class="container">
-            <div class="row">
-               <div class="col-12">
-                  <div class="redefine_wrapper" data-bg-image="assets/images/shapes/shape-1.png">
-                     <div class="redefine_title">
-                        <h2 class="title">Redefine your urban style</h2>
+         <div class="page-width">
+            <div class="redefine_wrapper" data-bg-image="assets/images/shapes/shape-1.png">
+               <div class="redefine_title">
+                  <h2 class="title">Redefine your urban style</h2>
+               </div>
+               <div class="redefine_item">
+                  <div class="redefine_images">
+                     <img src="assets/images/style/style-1.png" alt="Images">
+                     <div class="shapes-1">
+                        <img src="assets/images/shapes/street-1.png" alt="Shapes">
                      </div>
-                     <div class="redefine_item">
-                        <div class="redefine_images">
-                           <img src="assets/images/style/style-1.png" alt="Images">
-                           <div class="shapes-1">
-                              <img src="assets/images/shapes/street-1.png" alt="Shapes">
+                  </div>
+                  <div class="redefine_content">
+                     <h3 class="title">dapper is more than just clothes. We're a movement. A culture</h3>
+                     <div class="desc">
+                        <p>We are a collective of creators, curating a minimalist aesthetic with a bold edge. Our
+                           designs are for the modern individual who seeks quality, comfort, and a touch of
+                           rebellion.</p>
+                        <p>We're pushing the boundaries of urban fashion, blending bold designs with refined
+                           essentials. Join us in redefining the streets.</p>
+                     </div>
+                     <div class="redefine_button">
+                        <a class="text-btn" href="#">Learn More <span><i
+                                 class="fa-sharp fa-solid fa-angle-right"></i></span></a>
+                     </div>
+                     <div class="shapes-2">
+                        <img src="assets/images/shapes/style-2.png" alt="Shapes">
+                     </div>
+                     <div class="shapes-3">
+                        <img src="assets/images/shapes/urban.png" alt="Shapes">
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- end: Redefine Section -->
+
+      <!-- start: Testimonial Section -->
+      <section class="testimonial-section">
+         <div class="page-width">
+            <div class="heading_area">
+               <h2 class="sec_title">Customer Reviews</h2>
+            </div>
+            <div class="testimonial_erap">
+               <div class="carousel"
+                  data-flickity='{ "freeScroll": true, "contain": true, "prevNextButtons": true, "pageDots": false }'>
+                  <div class="testimonial-item">
+                     <div class="testimonial-images">
+                        <img src="assets/images/testimonial/testimonial-1.png" alt="Images">
+                     </div>
+                     <div class="testimonial-content">
+                        <div class="testimonial-text">
+                           <h5 class="title">Elevated Streetwear</h5>
+                           <div class="desc">
+                              <p>"I love the way Dapper blends urban aesthetics with high-end fashion. Their
+                                 attention
+                                 to detail is unmatched, in the quality of the materials."</p>
                            </div>
                         </div>
-                        <div class="redefine_content">
-                           <h3 class="title">dapper is more than just clothes. We're a movement. A culture</h3>
+                        <div class="testimonial-author">
+                           <div class="author-images">
+                              <img src="assets/images/testimonial/testimonial-2.png" alt="Images">
+                           </div>
+                           <div class="author-text">
+                              <h5 class="title">Anya Petrova</h5>
+                              <span class="designation">Paris, France</span>
+                           </div>
+                        </div>
+                        <div class="testimonial-infos">
+                           <div class="infos-text">
+                              <h6 class="title"><a href="#">Corduroy Down Jacket</a></h6>
+                              <span class="price">$1,255.00</span>
+                           </div>
+                           <div class="testimonial-button">
+                              <a class="link-btn" href="#"><i class="fa-sharp-duotone fa-regular fa-plus"></i></a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="testimonial-item">
+                     <div class="testimonial-images">
+                        <img src="assets/images/testimonial/testimonial-3.png" alt="Images">
+                     </div>
+                     <div class="testimonial-content">
+                        <div class="testimonial-text">
+                           <h5 class="title">Sleek and Stylish</h5>
                            <div class="desc">
-                              <p>We are a collective of creators, curating a minimalist aesthetic with a bold edge. Our
-                                 designs are for the modern individual who seeks quality, comfort, and a touch of
-                                 rebellion.</p>
-                              <p>We're pushing the boundaries of urban fashion, blending bold designs with refined
-                                 essentials. Join us in redefining the streets.</p>
+                              <p>"Their pieces are not only stylish but also incredibly comfortable. I've received
+                                 numerous compliments since I started incorporating their brand into my wardrobe."
+                              </p>
                            </div>
-                           <div class="redefine_button">
-                              <a class="text-btn" href="#">Learn More <span><i
-                                       class="fa-sharp fa-solid fa-angle-right"></i></span></a>
+                        </div>
+                        <div class="testimonial-author">
+                           <div class="author-images">
+                              <img src="assets/images/testimonial/testimonial-4.png" alt="Images">
                            </div>
-                           <div class="shapes-2">
-                              <img src="assets/images/shapes/style-2.png" alt="Shapes">
+                           <div class="author-text">
+                              <h5 class="title">Michael Williams</h5>
+                              <span class="designation">Florida, US</span>
                            </div>
-                           <div class="shapes-3">
-                              <img src="assets/images/shapes/urban.png" alt="Shapes">
+                        </div>
+                        <div class="testimonial-infos">
+                           <div class="infos-text">
+                              <h6 class="title"><a href="#">Logo Vertigo Hoodie</a></h6>
+                              <span class="price">$585.00</span>
+                           </div>
+                           <div class="testimonial-button">
+                              <a class="link-btn" href="#"><i class="fa-sharp-duotone fa-regular fa-plus"></i></a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="testimonial-item">
+                     <div class="testimonial-images">
+                        <img src="assets/images/testimonial/testimonial-1.png" alt="Images">
+                     </div>
+                     <div class="testimonial-content">
+                        <div class="testimonial-text">
+                           <h5 class="title">Elevated Streetwear</h5>
+                           <div class="desc">
+                              <p>"I love the way Dapper blends urban aesthetics with high-end fashion. Their
+                                 attention
+                                 to detail is unmatched, in the quality of the materials."</p>
+                           </div>
+                        </div>
+                        <div class="testimonial-author">
+                           <div class="author-images">
+                              <img src="assets/images/testimonial/testimonial-2.png" alt="Images">
+                           </div>
+                           <div class="author-text">
+                              <h5 class="title">Anya Petrova</h5>
+                              <span class="designation">Paris, France</span>
+                           </div>
+                        </div>
+                        <div class="testimonial-infos">
+                           <div class="infos-text">
+                              <h6 class="title"><a href="#">Corduroy Down Jacket</a></h6>
+                              <span class="price">$1,255.00</span>
+                           </div>
+                           <div class="testimonial-button">
+                              <a class="link-btn" href="#"><i class="fa-sharp-duotone fa-regular fa-plus"></i></a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="testimonial-item">
+                     <div class="testimonial-images">
+                        <img src="assets/images/testimonial/testimonial-3.png" alt="Images">
+                     </div>
+                     <div class="testimonial-content">
+                        <div class="testimonial-text">
+                           <h5 class="title">Sleek and Stylish</h5>
+                           <div class="desc">
+                              <p>"Their pieces are not only stylish but also incredibly comfortable. I've received
+                                 numerous compliments since I started incorporating their brand into my wardrobe."
+                              </p>
+                           </div>
+                        </div>
+                        <div class="testimonial-author">
+                           <div class="author-images">
+                              <img src="assets/images/testimonial/testimonial-4.png" alt="Images">
+                           </div>
+                           <div class="author-text">
+                              <h5 class="title">Michael Williams</h5>
+                              <span class="designation">Florida, US</span>
+                           </div>
+                        </div>
+                        <div class="testimonial-infos">
+                           <div class="infos-text">
+                              <h6 class="title"><a href="#">Logo Vertigo Hoodie</a></h6>
+                              <span class="price">$585.00</span>
+                           </div>
+                           <div class="testimonial-button">
+                              <a class="link-btn" href="#"><i class="fa-sharp-duotone fa-regular fa-plus"></i></a>
                            </div>
                         </div>
                      </div>
@@ -66,12 +256,13 @@
             </div>
          </div>
       </section>
-      <!-- end: Start Section -->
+      <!-- end: Testimonial Section -->
    </main>
 
    <!-- JS here -->
    <script src="assets/js/jquery.min.js"></script>
    <script src="assets/js/bootstrap.bundle.min.js"></script>
+   <script src="assets/js/flickity.pkgd.min.js"></script>
    <script src="assets/js/meanmenu.js"></script>
    <script src="assets/js/main.js"></script>
 </body>
